
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_family; int sin_port; struct in_addr sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int addr ;
typedef int SOCKET ;


 int AF_INET ;
 int PF_INET ;
 int SOCK_STREAM ;
 int closesocket (int) ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int perror (char*) ;
 int socket (int ,int ,int ) ;

SOCKET do_connect (char *remotehost, int port)
{
 static struct hostent *host;
 static struct sockaddr_in addr;
 SOCKET s;
 host = gethostbyname(remotehost);
 if (!host)
 {
  perror("   [-] gethostbyname() failed");
  return -1;
 }
 addr.sin_addr = *(struct in_addr*)host->h_addr;

 s = socket(PF_INET, SOCK_STREAM, 0);
 if (s == -1)
 {
  closesocket(s);
  perror("socket() failed");
  return -1;
 }
 addr.sin_port = htons(port);
 addr.sin_family = AF_INET;
 if (connect(s, (struct sockaddr*)&addr, sizeof(addr)) == -1)
 {
  closesocket(s);
  return -1;
 }
 return s;
}
